Codecademy generated from the project submission page.

--- a/Test Code Academy/index.html
+++ b/Test Code Academy/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <div>
-  <h1 id="store">Dasmoto's Arts $ Crafts"</h1>
+  <h1 id="store">Dasmoto's Arts & Crafts</h1>
   <h2 <p class="brushes">Brushes</h2></p>
 <img src="resourses/hacksaw.jpeg">
     <h3>Hacksaw Brushes</h3>
